Added cover over game over controls to protect user from misclick at end

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
 		</div>
 		<div class="overMenu">
 					<h1>Oof</h1>
-					<div class="main_menu_button2" ><a id="restart_button">Restart</a></div>
-					<div class="main_menu_button2" ><a class="nav_button">Options</a></div>
-					<div class="main_menu_button2" ><a id="main_menu_button">Main Menu</a></div>
-					<div class="options_menu_button2 toggle"><a class="sound_button">Sounds<div><div class="soundChk"></div></div></a></div>
-					<div class="options_menu_button2 toggle"><a class="music_button">Music<div><div class="musChk"></div></div></a></div>
-					<div class="options_menu_button2"><a class="nav_button">Back</a></div>
+					<div style="position: relative;">
+						<div class="overMenuCover"></div>
+						<div class="main_menu_button2" ><a id="restart_button">Restart</a></div>
+						<div class="main_menu_button2" ><a class="nav_button">Options</a></div>
+						<div class="main_menu_button2" ><a id="main_menu_button">Main Menu</a></div>
+						<div class="options_menu_button2 toggle"><a class="sound_button">Sounds<div><div class="soundChk"></div></div></a></div>
+						<div class="options_menu_button2 toggle"><a class="music_button">Music<div><div class="musChk"></div></div></a></div>
+						<div class="options_menu_button2"><a class="nav_button">Back</a></div>
+					</div>
 		</div>
 	</body>
 	<script src="./src/jquery-3.4.0.min.js"></script>
