Added credits page

--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
 					<h1>React</h1>
 					<div class="main_menu_button one" ><a id="play_button">Play</a></div>
 					<div class="main_menu_button one" ><a class="nav_button">Options</a></div>
+					<div class="main_menu_button one" ><a class="toggleCredits">Credits</a></div>
 					<div class="options_menu_button toggle one"><a class="sound_button">Sounds<div><div class="soundChk"></div></div></a></div>
 					<div class="options_menu_button toggle one"><a class="music_button">Music<div><div class="musChk"></div></div></a></div>
 					<div class="options_menu_button one"><a class="nav_button">Back</a></div>
-		</div>
-		<div class="footer fadeIn">
-			<div>Samuel Lundquist</div>
-			<div id="ft_date">November, 2020</div>
 		</div>
 		<div class="gameWindow">
 			<span id="gameUI">
@@ -43,6 +40,42 @@
 						<div class="options_menu_button2 toggle"><a class="music_button">Music<div><div class="musChk"></div></div></a></div>
 						<div class="options_menu_button2"><a class="nav_button">Back</a></div>
 					</div>
+		</div>
+		<div class="credits">
+			<h1>Credits</h1>
+			<h2>Contributors</h2>
+			<span class="nameSpan">
+				<div class="position">Lead Developer</div>
+				<div class="name">- Me</div>
+			</span>
+			<span class="nameSpan">
+				<div class="position">UI Design</div>
+				<div class="name">- Me</div>
+			</span>
+			<span class="nameSpan">
+				<div class="position">Sound Engineer</div>
+				<div class="name">- Me</div>
+			</span >
+			<span class="nameSpan">
+				<div class="position">Marketing Coordinator</div>
+				<div class="name">- Me</div>
+			</span>
+			<span class="nameSpan">
+				<div class="position">ME</div>
+				<div class="name">- Samuel Lundquist</div>
+			</span>
+			<br></br>
+			<h2>Music</h2>
+			<span class="nameSpan">
+				<div class="position">SynthwaveD</div>
+				<div class="name">- by TechnoAXE</div>
+			</span>
+			<br></br>
+			<div class="creditsUI">
+				<a class="toggleCredits closeCredits">Main Menu</a>
+				<a class="coffee">Buy me a coffee</a>
+			</div>
+
 		</div>
 	</body>
 	<script src="./src/jquery-3.4.0.min.js"></script>
