added new highscore functionality

--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
 		</div>
 		<div class="gameWindow">
 			<span id="gameUI">
+				<span class="hiscoreNotif">
+					<div id="cover"></div>
+					<div class="notif">New highscore!
+						<div id="cover"></div>
+					</div>
+				</span>
 				<div id="lifeBar"></div>
-				<div>
-					<div>High Score:</div>
+				<div class="highscoreView">
+					<div>High Score:&nbsp;</div>
 					<div id="hscore">0</div>
 				</div>
 				<h1 id="score">0</h1>
